Fix GitHub Actions: Auto-accept SDK licenses

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,7 @@ jobs:
 
     - name: Build with Buildozer
       run: |
+        yes | sdkmanager --licenses
         buildozer -v android debug
 
     - name: Upload APK
